animation file modified

--- a/Animations_ass/index.html
+++ b/Animations_ass/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-    <div class="container">
+    <div class="rotateImages">
         <img class="rotateImg" src="https://t2.gstatic.com/images?q=tbn:ANd9GcQ4FsABB-e4DsJ8bLPIB2O6pnVQNpu0Xji2r7eZFPC8y7srHaXL" alt="1"height="380px" width="350px">
         <img class="rotateImg" src="https://i.etsystatic.com/37271895/r/il/c1fc19/4341390936/il_794xN.4341390936_pe43.jpg" alt="2" height="380px" width="350px">
         <img class="rotateImg" src="https://encrypted-tbn3.gstatic.com/images?q=tbn:ANd9GcQ7WvR3uexOsMHN3Wr6X_-bUCqKVovonc0lynbx-9zX6NwGhgue" alt="3" height="380" width="350px">
